fixing grid layout, works on mobile, working on[ indexedDB, set and retrieve data to/from DB, not update view yet

--- a/assets/sass/blocks.scss
+++ b/assets/sass/blocks.scss
@@ -1,121 +1,144 @@
 body {
-    display: grid;
-    grid-template-areas:
-        'h h h'
-        'c c c'
-        'atf atf atf';
-    width: 600px;
+  display: grid;
+  grid-template-areas:
+    'h h h'
+    'c c c'
+    'atf atf atf';
+  width: 600px;
+  max-width: 100%;
+  margin: 0 auto;
 }
 
 #header {
-    grid-area: h;
-    text-align: center;
+  grid-area: h;
+  text-align: center;
 }
 
 .content {
+  display: grid;
+  grid-row-gap: 10px;
+  grid-area: c;
+  &_container {
     display: grid;
-    grid-row-gap: 10px;
-    grid-area: c;
-    &_container {
-        display: grid;
-        grid-template-areas:
-            'l tt b';
-        grid-template-columns: 100px 1fr 200px;
-        text-align: center;
+    grid-template-areas: 'l tt b';
+    grid-template-columns: 30px 1fr 100px;
+    text-align: center;
+  }
+  .list_numbers {
+    grid-area: l;
+  }
+  .todo_text {
+    grid-area: tt;
+    overflow: scroll;
+    &:focus {
+      outline: none;
+      background-color: rgba(0, 150, 199, 0.35);
     }
-    .list_numbers {
-        grid-area: l;
-    }
-    .todo_text {
-        grid-area: tt;
-        &:focus {
-            outline: none;
-            background-color: rgba(0, 150, 199, .35);
-        }
-    }
-    .list_numbers,
-    .todo_text {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
+  }
+  .list_numbers,
+  .todo_text {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+  }
+}
+
+.section {
+  padding: 40px;
 }
 
 #add_text_field {
-    grid-area: atf;
-    display: grid;
-    grid-template-areas: 
-        'ph if b';
-    grid-template-columns: 100px 1fr 200px;
-    margin-top: 25px;
-    input.text {
-        grid-area: if;
-    }
-    .placeholderDiv {
-        grid-area: ph;
-    }
+  grid-area: atf;
+  display: grid;
+  grid-template-areas: 'ph if b';
+  grid-template-columns: 30px 200px 1fr;
+  margin-top: 25px;
+  input.text {
+    grid-area: if;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+  }
+  .placeholderDiv {
+    grid-area: ph;
+  }
 }
 
 button {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    background-size: 50%;
-    background-repeat: no-repeat;
-    background-position: 50% 50%;
-    transition: background-color .5s;
-    &:disabled {
-        opacity: .5;
+  width: 28px;
+  height: 28px;
+  border-radius: 50%;
+  background-size: 50%;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  transition: background-color 0.5s;
+  &:disabled {
+    opacity: 0.5;
+  }
+  &.add_content {
+    background-image: url('../../Assets/images/plus.svg');
+    background-color: lighten($color: #000000, $amount: 75);
+  }
+  &.update_status {
+    background-image: url('../../Assets/images/tick.svg');
+    background-color: lighten($color: #00ff00, $amount: 33);
+  }
+  &.update_done {
+    background-image: url('../../Assets/images/text.svg');
+    background-color: lighten($color: #555599, $amount: 33);
+  }
+  &.remove_content {
+    background-image: url('../../Assets/images/remove.svg');
+    background-color: lighten($color: #ff0000, $amount: 33);
+  }
+  &.add_content {
+    &:not(:disabled) {
+      &:hover {
+        background-color: lighten($color: #000000, $amount: 40);
+      }
     }
-    &.add_content {
-        background-image: url('../../Assets/images/plus.svg');
-        background-color: lighten($color: #000000, $amount: 75);
+  }
+  &.update_status {
+    &:not(:disabled) {
+      &:hover {
+        background-color: lighten($color: #00ff00, $amount: 10);
+      }
     }
-    &.update_status {
-        background-image: url('../../Assets/images/tick.svg');
-        background-color: lighten($color: #00ff00, $amount: 33);
+  }
+  &.update_done {
+    &:not(:disabled) {
+      &:hover {
+        background-color: lighten($color: #559999, $amount: 10);
+      }
     }
-    &.update_done {
-        background-image: url('../../Assets/images/text.svg');
-        background-color: lighten($color: #555599, $amount: 33);
+  }
+  &.remove_content {
+    &:not(:disabled) {
+      &:hover {
+        background-color: lighten($color: #ff0000, $amount: 10);
+      }
     }
-    &.remove_content {
-        background-image: url('../../Assets/images/remove.svg');
-        background-color: lighten($color: #ff0000, $amount: 33);
-    }
-    &.add_content {
-        &:not(:disabled) {
-            &:hover {
-                background-color: lighten($color: #000000, $amount: 40);
-            }
-        }
-    }
-    &.update_status {
-        &:not(:disabled) {
-            &:hover {
-                background-color: lighten($color: #00ff00, $amount: 10);
-            }
-        }
-    }
-    &.update_done {
-        &:not(:disabled) {
-            &:hover {
-                background-color: lighten($color: #559999, $amount: 10);
-            }
-        }
-    }
-    &.remove_content {
-        &:not(:disabled) {
-            &:hover {
-                background-color: lighten($color: #ff0000, $amount: 10);
-            }
-        }
-    }
+  }
 }
 
 .button_container {
-    grid-area: b;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+  grid-area: b;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+@media (min-width: 640px) {
+  .section {
+    padding: 0;
+  }
+  .content_container {
+    grid-template-columns: 30px 1fr 130px;
+  }
+  button {
+    width: 35px;
+    height: 35px;
+  }
+
+  #add_text_field {
+    grid-template-columns: 30px 1fr 50px;
+  }
 }
